# serial-lcm-bridge

./: .gitignore  LICENSE  Makefile.am  README.md  bitbucket-pipelines.yml  configure.ac  scan-build-check
.github/workflows/: build-if-tag-release.yaml
c/: bridge.c  bridges.h  complex.c  complex.h  r2_sfd.h  r2_sio.h  serial-to-lcm.c  simple-bridge.c  simple.c  simple.h  source.c
cpp/: Serial.cpp  Serial.hpp
doc/: serial-lcm-bridge.1.ronn.md  simple-serial-lcm-bridge.1.ronn.md
python/: bridge.py  line-bridge.py
test/c/: send_raw_bytes.c
types/: line_t.lcm  raw_bytes_t.lcm
